2008-02-04  Dan Winship  <danw@gnome.org>

	* libsoup/Makefile.am: Fix the handling of soup-enum-types.h to
	ensure that it gets built before the things that depend on it.

2008-02-03  Benjamin Otte  <otte@gnome.org>

	* libsoup/soup-socket.c: update documentation to new API

2008-02-02  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session.c: fix default connections-per-host again;
	it was defined in two places. Add SOUP_SESSION_USER_AGENT property
	(setup_message): set the User-Agent request header on the request

	* libsoup/soup-server.c: add SOUP_SERVER_SERVER_HEADER property
	(start_request): set the Server response header on the request.

	* tests/get.c:
	* tests/simple-httpd.c: set the User-Agent/Server headers

2008-02-02  Dan Winship  <danw@gnome.org>

	* libsoup/soup-headers.c (soup_headers_parse_request): if the
	request headers contain an unrecognized Expect: header, return
	SOUP_STATUS_EXPECTATION_FAILED. Also, process Connection headers
	in HTTP/1.0 messages as required by 2616 14.10.
	(soup_headers_parse_response): Likewise handle Connection headers
	in HTTP/1.0 messages

	* tests/header-parsing.c: test those things

2008-02-02  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session.c (redirect_handler): Misc fixes: don't
	redirect on "300 Multiple Choices", "304 Not Modified", "305 Use
	Proxy", or any unrecognized status code. Don't redirect unsafe
	methods on 301, 302, or 307. Redirect POST to GET on 303.

	* tests/redirect-test.c: test of redirection handling behavior.

2008-02-02  Dan Winship  <danw@gnome.org>

	* libsoup/soup-method.h (SOUP_METHOD_GET, etc): Fix these so that
	direct comparisons against them actually *are* faster than doing
	strcmp, as the docs claim.

	* libsoup/soup-uri.h (SOUP_URI_SCHEME_HTTP,
	SOUP_URI_SCHEME_HTTPS): likewise

2008-02-01  Dan Winship  <danw@gnome.org>

	* libsoup/soup-address.c: Use GObject properties.
	(soup_address_new, soup_address_new_from_sockaddr)